added content plan

--- a/Report_templates/report.html.j2
+++ b/Report_templates/report.html.j2
@@ -29,12 +29,18 @@
   </head>
   <body>
     <h1> FASTQC-like Report </h1>
-    <hr>
-
     <p>
       Generated at {{now|format_datetime}}.
     </p>
     
+    <hr>
+
+    <ol>
+      <li><a href="#part_1">Part 1</a></li>
+      <li><a href="#part_2">Psrt 2</a></li>
+    </ol>
+
+
     <table style="width: 100%;">
     <tbody>
       <TR>
@@ -61,7 +67,7 @@
     </table>
     <hr>
 
-    <h2> Per Base Sequence Quality </h2>
+    <h2><a id="part_1"> Per Base Sequence Quality </a></h2>
     <img src="./Per_base_sequence_quality.png">
     <hr>
 
