--- a/Report_templates/report.html.j2
+++ b/Report_templates/report.html.j2
@@ -122,15 +122,15 @@
     </table>
     <hr>
 
-    <h2><a id="part_1"> Per base sequence quality </a></h2>
+    <h2><a id="part_1"> {{ status_header(per_base_seq_quality_result, 'Per base sequence quality', 'Header') }} </a></h2>
     <img src="./Per_base_sequence_quality.png">
-    <hr>
+    <hr>    
 
-    <h2><a id="part_2"> Per sequence quality scores </a></h2>
+    <h2><a id="part_2"> {{ status_header(plot_per_seq_quality_scores_result, 'Per sequence quality scores', 'Header') }} </a></h2>
     <img src="./Per_sequence_quality_scores.png">
-    <hr>
+    <hr>    
 
-    <h2><a id="part_3"> Per base sequence content </a></h2>
+    <h2><a id="part_3"> {{ status_header(plot_per_base_seq_content_result, 'Per base sequence content', 'Header') }} </a></h2>
     <img src="./Per_base_sequence_content.png">
     <hr>
 
