--- a/Report_templates/report.html.j2
+++ b/Report_templates/report.html.j2
@@ -16,7 +16,7 @@
   {% if overrepresented_sequences_table == 'No overrepresented sequences' %}
     <span style="margin-right: auto!important; margin-left: auto!important;"> {{overrepresented_sequences_table}} </span>
 
-  {% else'%}
+  {% else %}
     {{ overrepresented_sequences_table }}
   {% endif %}
 
