--- a/Report_templates/report.html.j2
+++ b/Report_templates/report.html.j2
@@ -85,7 +85,7 @@
   </style>
 
   <body>
-    <h1> FASTQC-like Report </h1>
+    <h1> The Vagus. FASTQC quality Report </h1>
     <p>
       Generated at {{now|format_datetime}}.
     </p>
