--- a/Report_templates/report.html.j2
+++ b/Report_templates/report.html.j2
@@ -14,7 +14,7 @@
 {% macro overrepresented_sequences_style(overrepresented_sequences_table) %}
 
   {% if overrepresented_sequences_table == 'No overrepresented sequences' %}
-    <span style="margin-right: auto!important; margin-left: auto!important;"> {{overrepresented_sequences_table}} </span>
+    <p> {{overrepresented_sequences_table}} </p>
 
   {% else %}
     {{ overrepresented_sequences_table }}
@@ -85,7 +85,8 @@
   </style>
 
   <body>
-    <h1> The Vagus. Quality Report </h1>
+    <h1> The Vagus. </h1>
+    <h2> Quality Report </h2>
     <p>
       Generated at {{now|format_datetime}}.
     </p>
